<resources>
    <string name="app_name">"My App Portfolio "</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="toast_msg">This button will launch</string>
    <string name="btn_5">CAPSTONE: MY OWN APP</string>
    <string name="btn_4">XYZ READER</string>
    <string name="btn_3">BUILD IT BIGGER</string>
    <string name="btn_2">LIBRARY APP</string>
    <string name="btn_1">SCORES APP</string>
</resources>
