<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:text="My Nanodegree Apps!"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_1"
        style="@style/btn1_4style"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_1" />

    <Button
        android:id="@+id/btn_2"
        android:layout_below="@id/btn_1"
        style="@style/btn1_4style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_2" />

    <Button
        android:id="@+id/btn_3"
        style="@style/btn1_4style"
        android:layout_below="@id/btn_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_3" />

    <Button
        android:id="@+id/btn_4"
        style="@style/btn1_4style"
        android:layout_below="@id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_4" />

    <Button
        android:id="@+id/btn_5"
        android:layout_below="@id/btn_4"
        style="@style/btn5style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_5" />


</RelativeLayout>
